--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
